Update to 1.18.2 Update JEI Compat to new systems. Removed a lot of duplicate classes that are now in vanilla.